--- a/SpotOn.Data/SpotOn.Data.csproj
+++ b/SpotOn.Data/SpotOn.Data.csproj
@@ -88,6 +88,7 @@
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Playlist.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Song.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
