WORK LIKE YOU SHOULD GITHUB

--- a/SpotOn.Data/SpotOn.Data.csproj
+++ b/SpotOn.Data/SpotOn.Data.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+	  <!--ADD THE USER AND SONG GITHUB-->
     <Compile Include="Artist.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Playlist.cs" />
