--- a/SpotOn.Data/SpotOn.Data.csproj
+++ b/SpotOn.Data/SpotOn.Data.csproj
@@ -84,10 +84,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-	  <!--ADD THE USER AND SONG GITHUB-->
+    <!--ADD THE USER AND SONG GITHUB-->
     <Compile Include="Artist.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Playlist.cs" />
+    <Compile Include="Podcast.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
     <Compile Include="User.cs" />
