--- a/SpotOn.Data/SpotOn.Data.csproj
+++ b/SpotOn.Data/SpotOn.Data.csproj
@@ -84,7 +84,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-	  <!--ADD THE USER AND SONG GITHUB-->
+    <!--ADD THE USER AND SONG GITHUB-->
+    <Compile Include="Album.cs" />
     <Compile Include="Artist.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Playlist.cs" />
