--- a/SpotOn.Models/SpotOn.Models.csproj
+++ b/SpotOn.Models/SpotOn.Models.csproj
@@ -88,6 +88,10 @@
     <Compile Include="PlaylistDetail.cs" />
     <Compile Include="PlaylistEdit.cs" />
     <Compile Include="PlaylistListItem.cs" />
+    <Compile Include="PodcastCreate.cs" />
+    <Compile Include="PodcastDetail.cs" />
+    <Compile Include="PodcastEdit.cs" />
+    <Compile Include="PodcastListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
