--- a/SpotOn.Models/SpotOn.Models.csproj
+++ b/SpotOn.Models/SpotOn.Models.csproj
@@ -84,6 +84,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlbumCreate.cs" />
+    <Compile Include="AlbumDetail.cs" />
+    <Compile Include="AlbumEdit.cs" />
+    <Compile Include="AlbumListItem.cs" />
     <Compile Include="ArtistCreate.cs" />
     <Compile Include="ArtistDetail.cs" />
     <Compile Include="ArtistEdit.cs" />
@@ -93,6 +97,10 @@
     <Compile Include="PlaylistEdit.cs" />
     <Compile Include="PlaylistListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SongCreate.cs" />
+    <Compile Include="SongDetail.cs" />
+    <Compile Include="SongEdit.cs" />
+    <Compile Include="SongListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
