--- a/SpotOn.Services/SpotOn.Services.csproj
+++ b/SpotOn.Services/SpotOn.Services.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArtistServices.cs" />
+    <Compile Include="PlaylistServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
