--- a/SpotOn.Services/SpotOn.Services.csproj
+++ b/SpotOn.Services/SpotOn.Services.csproj
@@ -90,6 +90,7 @@
     <Compile Include="PodcastService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
