--- a/SpotOn/SpotOn.WebApi.csproj
+++ b/SpotOn/SpotOn.WebApi.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\ArtistController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlaylistControllers.cs" />
+    <Compile Include="Controllers\PodcastController.cs" />
     <Compile Include="Controllers\SongController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
